Fixes Chrome stretch issue.

--- a/Server/RoomTemp/ClientApp/src/components/temperatureChart/TemperatureChart.css
+++ b/Server/RoomTemp/ClientApp/src/components/temperatureChart/TemperatureChart.css
@@ -1,7 +1,6 @@
 .chart-container {
-  max-width: 1000px;
-  width: 100%;
-  padding: 50px;
-  background: #2d2d2d;
-  border-radius: 20px;
+    background: #2d2d2d;
+    border-radius: 20px;
+    max-width: 1000px;
+    padding: 40px;
 }
